set value and text color in global rate

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="gray_200">#efefef</color>
     <color name="gray_300">#cbcbcb</color>
     <color name="green_100">#2ee97c</color>
+    <color name="green_200">#2fe77c</color>
     <color name="red_100">#e9263d</color>
     <color name="white_100">#f1f1f1</color>
     <color name="white_200">#f7f7f7</color>
