--- a/app/src/main/res/layout/item_global_rates.xml
+++ b/app/src/main/res/layout/item_global_rates.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -37,32 +36,37 @@
         app:layout_constraintStart_toEndOf="@+id/tvGlobalRates"
         app:layout_constraintTop_toTopOf="@+id/tvGlobalRates" />
 
-
-    <include
-        android:id="@+id/paramCoronavirusCases"
-        layout="@layout/item_param_value"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/flGlobalRate"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/item_param_value_height"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvGlobalRates" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tvGlobalRates">
 
-    <include
-        android:id="@+id/paramDeath"
-        layout="@layout/item_param_value"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/item_param_value_height"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/paramCoronavirusCases" />
+        <include
+            android:id="@+id/paramCoronavirusCases"
+            layout="@layout/item_param_value"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/item_param_value_height"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <include
-        android:id="@+id/paramRecovered"
-        layout="@layout/item_param_value"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/item_param_value_height"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/paramDeath" />
+        <include
+            android:id="@+id/paramDeath"
+            layout="@layout/item_param_value"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/item_param_value_height"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/paramCoronavirusCases" />
+
+        <include
+            android:id="@+id/paramRecovered"
+            layout="@layout/item_param_value"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/item_param_value_height"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/paramDeath" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
